tests/errors/array/array_lit_wrong_length_errors.sim

        fn f() {
          a: [i64; 3];
          entry:
            a = [1i64, 2i64];
            return
        }
        